sidebar scroll hart-cion alignment spacing fixed

--- a/app/sass/layout/_left-nav.scss
+++ b/app/sass/layout/_left-nav.scss
@@ -13,6 +13,7 @@
       z-index: 11;
       transition: all .3s ease;
       width: 260px;
+      height: 100vh;
       @include media-breakpoint-up(md){
         
         left: 0px;
